--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,14 +1,17 @@
 require:
+  - rubocop-factory_bot
   - rubocop-rails
   - rubocop-rspec
   - rubocop-performance
 
 AllCops:
   NewCops: enable
+  Exclude:
+    - db/schema.rb
+
+Style/Documentation:
+  Enabled: false
 
 Style/StringLiterals:
   Enabled: true
   EnforcedStyle: double_quotes
-
-Style/Documentation:
-  Enabled: false
