--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ require:
 AllCops:
   NewCops: enable
   Exclude:
+    - bin/bundle
     - db/schema.rb
 
 Style/Documentation:
@@ -15,3 +16,8 @@ Style/Documentation:
 Style/StringLiterals:
   Enabled: true
   EnforcedStyle: double_quotes
+
+Style/SymbolProc:
+  Enabled: true
+  Exclude:
+    - db/migrate/**/*.rb
