--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,7 @@ require:
   - rubocop-performance
 
 AllCops:
+  TargetRubyVersion: 3.2
   NewCops: enable
   Exclude:
     - bin/bundle
@@ -21,3 +22,19 @@ Style/SymbolProc:
   Enabled: true
   Exclude:
     - db/migrate/**/*.rb
+
+Style/TrailingCommaInArrayLiteral:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInHashLiteral:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInArguments:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
+
+Layout/MultilineMethodCallIndentation:
+  Enabled: true
+  EnforcedStyle: indented
